--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
         <li>Совместная ванна + массаж — 25,000$</li>
         <li>Ночь со мной (до 8 часов) — 100,000$</li>
         <li>Фото-/видеосъёмка + сопровождение — 80,000$</li>
-        <li>VIP Клиент — 200,000$</li>
       </ul>
     </div>
 
@@ -308,9 +307,42 @@
         <select id="serviceSelect" name="serviceSelect" required>
           <option value="" disabled selected>-- Выберите услугу --</option>
           <optgroup label="💋 Интимные услуги">
-            <option>Стандарт (1 час) — 40,000$</option>
-            <option>Минет — 25,000$</option>
-            <option>Фемдом * — 38,000$</option>
-            <option>Подчинение * — 80,000$</option>
-            <option>Шибари * — 20,000$</option>
-            <option>BDSM — 40,000$
+            <option value="Стандарт (1 час) — 40,000$">Стандарт (1 час) — 40,000$</option>
+            <option value="Минет — 25,000$">Минет — 25,000$</option>
+            <option value="Фемдом * — 38,000$">Фемдом * — 38,000$</option>
+            <option value="Подчинение * — 80,000$">Подчинение * — 80,000$</option>
+            <option value="Шибари * — 20,000$">Шибари * — 20,000$</option>
+            <option value="BDSM — 40,000$">BDSM — 40,000$</option>
+            <option value="Фут Джоб — 20,000$">Фут Джоб — 20,000$</option>
+            <option value="Тит Джоб — 20,000$">Тит Джоб — 20,000$</option>
+            <option value="Спанкинг — 15,000$">Спанкинг — 15,000$</option>
+            <option value="Пеггинг — 15,000$">Пеггинг — 15,000$</option>
+            <option value="Бондаж — 20,000$">Бондаж — 20,000$</option>
+            <option value="Игры с воском — 17,000$">Игры с воском — 17,000$</option>
+            <option value="Ролевая игра (Сценарий + 4,000$) — 20,000$">Ролевая игра (Сценарий + 4,000$) — 20,000$</option>
+            <option value="МейлДом — 22,000$">МейлДом — 22,000$</option>
+          </optgroup>
+          <optgroup label="💃 Дополнительные услуги">
+            <option value="Стриптиз / Приват-танец — 10,000$">Стриптиз / Приват-танец — 10,000$</option>
+            <option value="Совместная ванна + массаж — 25,000$">Совместная ванна + массаж — 25,000$</option>
+            <option value="Ночь со мной (до 8 часов) — 100,000$">Ночь со мной (до 8 часов) — 100,000$</option>
+            <option value="Фото-/видеосъёмка + сопровождение — 80,000$">Фото-/видеосъёмка + сопровождение — 80,000$</option>
+          </optgroup>
+        </select>
+
+        <label for="promoCode">Промокод</label>
+        <input type="text" id="promoCode" name="promoCode" placeholder="Введите промокод" />
+
+        <button type="submit">Отправить заказ</button>
+      </form>
+      <div id="orderMessage"></div>
+    </div>
+  </div>
+
+  <script>
+    // Показать всплывающее окно с промокодом на 8 секунд после загрузки страницы
+    window.onload = () => {
+      const promo = document.getElementById('promoPopup');
+      promo.style.display = 'block';
+      setTimeout(() => {
+        promo.style.display
