--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         приват-танцы, ролевые сценарии, BDSM-практики и элитные VIP-услуги. Мы предлагаем не просто интерактивные услуги,
         а атмосферу ночного клуба, где каждый пользователь может стать участником уникального ролевого опыта. Все заказы
         оформляются прямо через сайт.<br><br>
+        ⚠️ <em>Наша деятельность является нелегальной в данном штате. Любая информация, представленная на сайте, строго конфиденциальна и не должна попадать в руки государственных или правоохранительных органов.</em><br><br>
         Связь с организатором:<br>
         Discord: <code>wsometeazew</code><br>
         Telegram: <code>@crips_someteaze</code><br>
@@ -35,29 +36,31 @@
 
     <div id="price" class="card">
       <h2>💋 Интимные услуги</h2>
-      <ul>
-        <li>Стандарт (1 час) — 40,000$</li>
-        <li>Минет — 25,000$</li>
-        <li>Фемдом * — 38,000$</li>
-        <li>Подчинение * — 80,000$</li>
-        <li>Шибари * — 20,000$</li>
-        <li>BDSM — 40,000$</li>
-        <li>Фут Джоб — 20,000$</li>
-        <li>Тит Джоб — 20,000$</li>
-        <li>Спанкинг — 15,000$</li>
-        <li>Пеггинг — 15,000$</li>
-        <li>Бондаж — 20,000$</li>
-        <li>Игры с воском — 17,000$</li>
-        <li>Ролевая игра (Сценарий + 4,000$) — 20,000$</li>
-        <li>МейлДом — 22,000$</li>
-      </ul>
+      <p class="price-note">ℹ️ Подробное описание каждой услуги смотрите в нашем Discord-сервере в канале <strong>#price</strong></p>
+      <div class="service-grid">
+        <div class="service-card" data-service="Стандарт (1 час)">Стандарт (1 час) — 40,000$</div>
+        <div class="service-card" data-service="Минет">Минет — 25,000$</div>
+        <div class="service-card" data-service="Фемдом">Фемдом * — 38,000$</div>
+        <div class="service-card" data-service="Подчинение">Подчинение * — 80,000$</div>
+        <div class="service-card" data-service="Шибари">Шибари * — 20,000$</div>
+        <div class="service-card" data-service="BDSM">BDSM — 40,000$</div>
+        <div class="service-card" data-service="Фут Джоб">Фут Джоб — 20,000$</div>
+        <div class="service-card" data-service="Тит Джоб">Тит Джоб — 20,000$</div>
+        <div class="service-card" data-service="Спанкинг">Спанкинг — 15,000$</div>
+        <div class="service-card" data-service="Пеггинг">Пеггинг — 15,000$</div>
+        <div class="service-card" data-service="Бондаж">Бондаж — 20,000$</div>
+        <div class="service-card" data-service="Игры с воском">Игры с воском — 17,000$</div>
+        <div class="service-card" data-service="Ролевая игра">Ролевая игра (Сценарий + 4,000$) — 20,000$</div>
+        <div class="service-card" data-service="МейлДом">МейлДом — 22,000$</div>
+      </div>
+
       <h2>💃 Дополнительные услуги</h2>
-      <ul>
-        <li>Стриптиз / Приват-танец — 10,000$</li>
-        <li>Совместная ванна + массаж — 25,000$</li>
-        <li>Ночь со мной (до 8 часов) — 100,000$</li>
-        <li>Фото-/видеосъёмка + сопровождение — 80,000$</li>
-      </ul>
+      <div class="service-grid">
+        <div class="service-card" data-service="Стриптиз / Приват-танец">Стриптиз / Приват-танец — 10,000$</div>
+        <div class="service-card" data-service="Совместная ванна + массаж">Совместная ванна + массаж — 25,000$</div>
+        <div class="service-card" data-service="Ночь со мной">Ночь со мной (до 8 часов) — 100,000$</div>
+        <div class="service-card" data-service="Фото-/видеосъёмка + сопровождение">Фото-/видеосъёмка + сопровождение — 80,000$</div>
+      </div>
     </div>
 
     <div id="vip" class="card">
@@ -78,33 +81,24 @@
     <h2>Оформление заказа</h2>
     <form id="orderForm">
       <label for="discordNick">Ник Discord:</label>
-      <input type="text" id="discordNick" name="discordNick" placeholder="Введите ваш ник Discord" required />
+      <input type="text" id="discordNick" name="discordNick" required />
+
+      <label for="rpmNick">Ваш РПМ-ник:</label>
+      <input type="text" id="rpmNick" name="rpmNick" required />
 
       <label for="serviceSelect">Выберите услугу:</label>
       <select id="serviceSelect" name="serviceSelect" required>
         <option value="" disabled selected>-- Выберите услугу --</option>
-        <option value="Стандарт (1 час)">Стандарт (1 час) — 40,000$</option>
-        <option value="Минет">Минет — 25,000$</option>
-        <option value="Фемдом">Фемдом * — 38,000$</option>
-        <option value="Подчинение">Подчинение * — 80,000$</option>
-        <option value="Шибари">Шибари * — 20,000$</option>
-        <option value="BDSM">BDSM — 40,000$</option>
-        <option value="Фут Джоб">Фут Джоб — 20,000$</option>
-        <option value="Тит Джоб">Тит Джоб — 20,000$</option>
-        <option value="Спанкинг">Спанкинг — 15,000$</option>
-        <option value="Пеггинг">Пеггинг — 15,000$</option>
-        <option value="Бондаж">Бондаж — 20,000$</option>
-        <option value="Игры с воском">Игры с воском — 17,000$</option>
-        <option value="Ролевая игра">Ролевая игра (Сценарий + 4,000$) — 20,000$</option>
-        <option value="МейлДом">МейлДом — 22,000$</option>
-        <option value="Стриптиз / Приват-танец">Стриптиз / Приват-танец — 10,000$</option>
-        <option value="Совместная ванна + массаж">Совместная ванна + массаж — 25,000$</option>
-        <option value="Ночь со мной">Ночь со мной (до 8 часов) — 100,000$</option>
-        <option value="Фото-/видеосъёмка + сопровождение">Фото-/видеосъёмка + сопровождение — 80,000$</option>
+        <!-- те же опции, что и ранее -->
       </select>
 
-      <label for="promoCode">Промокод:</label>
-      <input type="text" id="promoCode" name="promoCode" placeholder="Введите промокод (если есть)" />
+      <label for="orderDate">Дата проведения услуги:</label>
+      <input type="date" id="orderDate" name="orderDate" required />
+
+      <div id="promoGroup">
+        <label for="promoCode">Промокод:</label>
+        <input type="text" id="promoCode" name="promoCode" />
+      </div>
 
       <button type="submit">Отправить заказ</button>
     </form>
